2006-08-07  David Schleef  <ds@schleef.org>

	* configure.ac: Check for audiofile.h.  Fixes #319464.

2006-08-07  David Schleef  <ds@schleef.org>

	* esd.c: Remove bogus call to hstrerror().  Fixes #319968.

2006-08-07  David Schleef  <ds@schleef.org>

	* esd.c: Don't terminate until last sample is finished playing.
	  Fixes #342729.

2006-08-07  David Schleef  <ds@schleef.org>

	* esd.c: close master socket in error cases. Fixes #314407.

2006-08-07  David Schleef  <ds@schleef.org>

	* esd.c: Close file descriptors after startup.  Fixes #333186.

2006-08-07  David Schleef  <ds@schleef.org>

	* esd.conf: Turn autospawning off by default.  Don't use
	  autospawning.  It doesn't work, and it isn't possible to
	  make it work.  esd should always be started from the session
	  manager.
	* esd_config.c:

2006-05-10  David Schleef  <ds@schleef.org>

	* m4/as-arts.m4: Fix arts detection.  Fixes #341251.  Patch
	  from Vladislav G. Mikhailikov.

2006-04-13  Behdad Esfahbod  <behdad@gnome.org>

	* esdlib.c: Fix build break.

2006-04-13  Kjartan Maraas  <kmaraas@gnome.org>

	* clients.c: (get_new_clients): Fix leak. Coverity #743
	and #875.
	* esd.c: (main): Fix null deref. Coverity #223
	* esdlib.c: Fix null deref. Coverity bug #775
	* esdmgr.c: (esd_get_all_info): Fix leaks. Coverity #773
	and #875.

2005-09-30  David Schleef  <ds@schleef.org>

	* Makefile.am: Don't compile util.o into esd binary, since it's
	  already in libesd.  (Fixes #317554)

2005-08-13  David Schleef  <ds@schleef.org>

	Patch from Thomas Zajic to actually install the documentation.
	* docs/Makefile.am: Fixes #307366

2005-06-18  David Schleef  <ds@schleef.org>

	* autogen.sh: Don't blow away user's ACLOCAL_FLAGS.

2005-06-17  David Schleef  <ds@schleef.org>

	* README: ha ha funny
	* autogen.sh: use gnome-autogen.sh
	* configure.ac: esound, not esd

2005-06-11  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Add audio_arts.c here to get it disted.

2005-06-06  David Schleef  <ds@schleef.org>
