@@ -1,5 +1,10 @@
 2006-08-07  David Schleef  <ds@schleef.org>
 
+	* players.c: Add checks for client disconnecting.  Patch from
+	  Peter Åstrand.  Fixes #322206.
+
+2006-08-07  David Schleef  <ds@schleef.org>
+
 	* configure.ac: Check for audiofile.h.  Fixes #319464.
 
 2006-08-07  David Schleef  <ds@schleef.org>
